--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ghanaian Birth-name Generator</title>
+
+    <link rel="stylesheet" href="StyleSheets/style.css" />
   </head>
   <body></body>
 </html>
