--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <link rel="stylesheet" href="StyleSheets/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-image"></div>
+  </body>
 </html>
