added Navbar and styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="StyleSheets/style.css" />
   </head>
   <body>
-    <div class="bg-image"></div>
+    <div class="bg-image">
+      <div class="nav-container">
+        <ul class="nav-links-container">
+          <li class="nav-link"><a href="#landing">Home</a></li>
+          <li class="nav-link"><a href="#generate">Generate</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
