added landing section to index html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
           <li class="nav-link"><a href="#generate">Generate</a></li>
         </ul>
       </div>
+
+      <section id="landing">
+        <div class="landing-container bg-overlay">
+          <p class="landing-heading">
+            Welcome to the Ghanaian birth-name generator.
+          </p>
+          <p class="landing-description">
+            Frequently, children are given a "day name" which corresponds to the
+            day in the week when they were born. These day names have further
+            meanings concerning the soul and character of the person.
+            <br />
+            This app, we aim to generate your birth name if you were born in
+            Ghana or from Ghanaian descendant, all you need to input is your
+            birth day and gender.
+          </p>
+          <p class="landing-disclaimer">
+            Disclaimer: None of the information submitted will be stored...
+          </p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
